--- a/index.html
+++ b/index.html
@@ -13,12 +13,31 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-
-    <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <nav></nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="logo.svg" alt="logo" /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Shop</a>
+            <a class="nav-link" href="#">Recipes</a>
+          </div>
+        </div>
+      </div>
+    </nav>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
