--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <title>Juice</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -38,6 +39,153 @@
         </div>
       </div>
     </nav>
+
+    <main class="container">
+      <section id="hero" class="row">
+        <div class="col-12 d-grid">
+          <img class="img-fluid" src="billede1.png" alt="" />
+
+          <h1 class="text-center">Orange CPH</h1>
+        </div>
+      </section>
+
+      <section id="section1" class="row mb-4">
+        <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
+          <img class="img-fluid" src="Ellipse.png" alt="billede" />
+        </div>
+
+        <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
+          <h2>underoverskrift</h2>
+          <p>
+            TO DO 💛 - Lave indhold (overskrifter og brødtekst) -
+            Beslutte/finde/tage billeder - Lave endelige mock ups af juice -
+            Spørge om 4 undersider er for meget og om vi skal have produktsider
+          </p>
+        </div>
+      </section>
+
+      <section id="section2" class="row mb-4">
+        <div
+          id="carouselWithCaptions"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <ol class="carousel-indicators">
+            <li
+              data-bs-target="#carouselWithCaptions"
+              data-bs-slide-to="0"
+              class=""
+            ></li>
+            <li
+              data-bs-target="#carouselWithCaptions"
+              data-bs-slide-to="1"
+              class="active"
+              aria-current="true"
+            ></li>
+            <li
+              data-bs-target="#carouselWithCaptions"
+              data-bs-slide-to="2"
+              class=""
+            ></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item">
+              <img src="cirkelpink.png" class="w-100" alt="Slide 1" />
+              <div class="carousel-caption">
+                <h5>First slide label</h5>
+                <p>
+                  Nulla vitae elit libero, a pharetra augue mollis interdum.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item active">
+              <img src="cirkels.png" class="w-100" alt="Slide 2" />
+              <div class="carousel-caption">
+                <h5>Second slide label</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="Ellipse.png" class="w-100" alt="Slide 3" />
+              <div class="carousel-caption">
+                <h5>Third slide label</h5>
+                <p>
+                  Praesent commodo cursus magna, vel scelerisque nisl
+                  consectetur.
+                </p>
+              </div>
+            </div>
+          </div>
+          <a
+            class="carousel-control-prev"
+            href="#carouselWithCaptions"
+            role="button"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </a>
+          <a
+            class="carousel-control-next"
+            href="#carouselWithCaptions"
+            role="button"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </a>
+        </div>
+      </section>
+      <section id="section3" class="row mb-4">
+        <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
+          <h2>The love story</h2>
+        </div>
+
+        <div class="col-12 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
+          <img class="img-fluid" src="cirkels.png" alt="" />
+        </div>
+        <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
+          <img class="img-fluid" src="cirkelpink.png" alt="" />
+        </div>
+      </section>
+
+      <section id="section4" class="row mb-4">
+        <div class="col-6 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
+          <img class="img-fluid" src="cirkels.png" alt="" />
+        </div>
+        <div class="col-6 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
+          <img class="img-fluid" src="cirkelpink.png" alt="" />
+        </div>
+        <div class="col-6 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
+          <img class="img-fluid" src="cirkels.png" alt="" />
+        </div>
+        <div class="col-6 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
+          <img class="img-fluid" src="cirkelpink.png" alt="" />
+        </div>
+        <button type="button" class="btn btn-outline-primary">Shop</button>
+      </section>
+
+      <section id="section5" class="row mb-4">
+        <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
+          <h2>Tekst</h2>
+        </div>
+
+        <div class="col-8 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
+          <img class="img-fluid" src="cirkels.png" alt="" />
+        </div>
+        <div class="col-4 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0 pic">
+          <img class="img-fluid" src="cirkelpink.png" alt="" />
+        </div>
+        <div class="col-4 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
+          <img class="img-fluid" src="cirkels.png" alt="" />
+        </div>
+        <div class="col-8 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
+          <img class="img-fluid" src="cirkelpink.png" alt="" />
+        </div>
+      </section>
+
+      <section id="footer"></section>
+    </main>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
