--- a/index.html
+++ b/index.html
@@ -45,27 +45,30 @@
     <main>
       <section id="hero" class="row">
         <div class="col-12 d-grid">
-          <img class="img-fluid" src="billede1.png" alt="" />
+          <img class="img-fluid" src="juicegron.png" alt="" />
 
           <h1 class="text-center">Orange CPH</h1>
         </div>
       </section>
 
       <section id="section1" class="row mb-4">
-        <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
+        <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0 text-center">
           <img
-            class="section1billede img-fluid"
             src="billede1.png"
+            class="section1billede img-fluid"
             alt="billede"
           />
         </div>
 
         <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
-          <h2>Underoverskrift</h2>
+          <h2>Fresh fruit, great juice</h2>
           <p>
-            TO DO 💛 - Lave indhold (overskrifter og brødtekst) -
-            Beslutte/finde/tage billeder - Lave endelige mock ups af juice -
-            Spørge om 4 undersider er for meget og om vi skal have produktsider
+            Frugt, bær og vitaminer… Findes der en bedre og mere frisk
+            kombination? We think not! Hos Orange cph lægges der kærlighed og
+            friske frugter i hver evig eneste juice. Det er vigtigt for os, at
+            give vores kunder muligheden for at nyde juicen ved morgenbordet
+            samt mixe en cocktail med et twist. Har du ikke prøvet vores juice
+            endnu? Du går seriøst glip af noget!
           </p>
         </div>
       </section>
@@ -96,7 +99,7 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item">
-              <img src="cirkelpink.png" class="w-100" alt="Slide 1" />
+              <img src="flaske1.png" class="w-100" alt="Slide 1" />
               <div class="carousel-caption">
                 <h5>First slide label</h5>
                 <p>
@@ -105,14 +108,14 @@
               </div>
             </div>
             <div class="carousel-item active">
-              <img src="cirkels.png" class="w-100" alt="Slide 2" />
+              <img src="flaske2.png" class="w-100" alt="Slide 2" />
               <div class="carousel-caption">
                 <h5>Second slide label</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="Ellipse.png" class="w-100" alt="Slide 3" />
+              <img src="flaske3.png" class="w-100" alt="Slide 3" />
               <div class="carousel-caption">
                 <h5>Third slide label</h5>
                 <p>
