--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     <main>
       <section id="hero" class="row">
-        <div class="col-12 d-grid">
-          <img class="img-fluid" src="juicegron.png" alt="" />
+        <div class="col-12 d-grid pt-5 pb-5">
+          <img class="img-fluid" src="appelsinjuice.png" alt="" />
 
           <h1 class="text-center">Orange CPH</h1>
         </div>
@@ -145,53 +145,103 @@
           </a>
         </div>
       </section>
+
+      <section id="section2-web" class="row mb-4 fluid-continer">
+        <div class="col-sm-4 p-0">
+          <img src="flaske1.png" class="img-fluid" alt="juice" />
+        </div>
+        <div class="col-sm-4 p-0">
+          <img src="flaske2.png" class="img-fluid" alt="juice" />
+        </div>
+        <div class="col-sm-4 p-0">
+          <img src="flaske3.png" class="img-fluid" alt="juice" />
+        </div>
+        <div class="col-sm-4 p-0">
+          <img src="flaske3.png" class="img-fluid" alt="juice" />
+        </div>
+        <div class="col-sm-4 p-0">
+          <img src="flaske1.png" class="img-fluid" alt="juice" />
+        </div>
+        <div class="col-sm-4 p-0">
+          <img src="flaske2.png" class="img-fluid" alt="juice" />
+        </div>
+      </section>
+
       <section id="section3" class="row mb-4">
         <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
-          <h2>The love story</h2>
+          <h2>The <i class="tyndskrift">simple</i> love story</h2>
         </div>
 
         <div class="col-12 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
+          <h5>
+            01. <br />
+            Opskrift - sådan blander du bla bla bla
+          </h5>
           <img class="img-fluid" src="cirkels.png" alt="" />
         </div>
+        <h5>
+          02.
+          <br />
+          Opskrift - sådan blander du bla bla bla
+        </h5>
         <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
           <img class="img-fluid" src="cirkelpink.png" alt="" />
         </div>
       </section>
 
-      <section id="section4" class="row mb-4">
+      <section id="section4" class="row mb-4 text-center">
         <div class="col-6 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
-          <img class="img-fluid" src="cirkels.png" alt="" />
+          <img class="img-fluid" src="orange.png" alt="" />
         </div>
         <div class="col-6 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
-          <img class="img-fluid" src="cirkelpink.png" alt="" />
+          <img class="img-fluid" src="orange.png" alt="" />
         </div>
         <div class="col-6 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
-          <img class="img-fluid" src="cirkels.png" alt="" />
+          <img class="img-fluid" src="orange.png" alt="" />
         </div>
         <div class="col-6 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
-          <img class="img-fluid" src="cirkelpink.png" alt="" />
+          <img class="img-fluid" src="orange.png" alt="" />
         </div>
-        <div class="d-flex justify-content-center">
+        <div class="col-12 d-flex justify-content-center">
           <button type="button" class="btn btn-outline-primary">Shop</button>
         </div>
       </section>
 
-      <section id="section5" class="row mb-4">
-        <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
-          <h2>Tekst</h2>
+      <section id="section4_web" class="row mb-4 p-5 text-center">
+        <div class="col-2">
+          <img class="img-fluid" src="orange.png" alt="" />
+        </div>
+        <div class="col-2">
+          <img class="img-fluid" src="orange.png" alt="" />
+        </div>
+        <div class="col-4">
+          <button type="button" class="btn btn-outline-primary">Shop</button>
+        </div>
+        <div class="col-2">
+          <img class="img-fluid" src="orange.png" alt="" />
+        </div>
+        <div class="col-2">
+          <img class="img-fluid" src="orange.png" alt="" />
+        </div>
+      </section>
+
+      <section id="section5" class="row mb-4 p-4">
+        <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0 text-center">
+          <h2>Let’s stay connected!</h2>
+          <h2>Follow us here</h2>
         </div>
 
-        <div class="col-8 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
-          <img class="img-fluid" src="cirkels.png" alt="" />
+        <div class="col-8 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0 p-1">
+          <img class="img-fluid" src="flaske1.png" alt="" />
         </div>
-        <div class="col-4 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0 pic">
-          <img class="img-fluid" src="cirkelpink.png" alt="" />
+        <div class="col-4 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0 pic p-1">
+          <img class="img-fluid" src="flaske2.png" alt="" />
         </div>
-        <div class="col-4 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
-          <img class="img-fluid" src="cirkels.png" alt="" />
+        <div class="col-4 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0 p-1">
+          <img class="img-fluid" src="flaske3.png" alt="" />
         </div>
-        <div class="col-8 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
-          <img class="img-fluid" src="cirkelpink.png" alt="" />
+        <div class="col-8 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0 p-1">
+          <img class="img-fluid" src="flaske1.png" alt="" />
         </div>
       </section>
     </main>
@@ -202,8 +252,8 @@
         <div class="col-sm-6 col-lg-6">
           <div>
             <h3>
-              Never miss out! <br />
-              We’ll sent you juicy news!
+              Never miss out — <br />
+              We’ll sent you <i>juicy</i> news!
             </h3>
           </div>
           <div>
