endnu flere justeringer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Juice</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
       <div class="container-fluid">
         <a class="logo navbar-brand" href="#"
           ><img src="logo.svg" alt="logo"
@@ -34,9 +34,9 @@
         </button>
         <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Shop</a>
-            <a class="nav-link" href="#">Recipes</a>
+            <a class="nav-link active" aria-current="page" href="#">home</a>
+            <a class="nav-link" href="#">shop</a>
+            <a class="nav-link" href="#">recipes</a>
           </div>
         </div>
       </div>
@@ -51,7 +51,7 @@
         </div>
       </section>
 
-      <section id="section1" class="row mb-4">
+      <section id="section1" class="row">
         <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0 text-center">
           <img
             src="billede1.png"
@@ -73,7 +73,7 @@
         </div>
       </section>
 
-      <section id="section2" class="row mb-4">
+      <section id="section2" class="row">
         <div
           id="carouselWithCaptions"
           class="carousel slide"
@@ -146,7 +146,7 @@
         </div>
       </section>
 
-      <section id="section2-web" class="row mb-4 fluid-continer">
+      <section id="section2-web" class="row fluid-continer">
         <div class="col-sm-4 p-0">
           <img src="flaske1.png" class="img-fluid" alt="juice" />
         </div>
@@ -167,17 +167,24 @@
         </div>
       </section>
 
-      <section id="section3" class="row mb-4">
-        <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0">
+      <section id="section3" class="row p-5 justify-content-center">
+        <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0 text-center">
           <h2>The <i class="tyndskrift">simple</i> love story</h2>
         </div>
 
-        <div class="col-12 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0">
+        <div
+          class="col-12 mb-4 col-sm-12 col-lg-12 col-xl-12 mb-lg-0 text-center"
+        >
           <h5>
             01. <br />
             Opskrift - sådan blander du bla bla bla
           </h5>
-          <img class="img-fluid" src="cirkels.png" alt="" />
+          <img
+            class="img-fluid"
+            src="frugter.png"
+            alt=""
+            style="width: 600px"
+          />
         </div>
         <h5>
           02.
@@ -225,7 +232,7 @@
         </div>
       </section>
 
-      <section id="section5" class="row mb-4 p-4">
+      <section id="section5" class="row mb-4 p-4 justify-content-center">
         <div class="col-12 mb-4 col-sm-6 col-lg-6 col-xl-6 mb-lg-0 text-center">
           <h2>Let’s stay connected!</h2>
           <h2>Follow us here</h2>
@@ -295,10 +302,16 @@
           <div>
             <br />
             <h5>Følg os</h5>
-            <div class="row mb-4">
-              <div class="col-4"><p>Instagram</p></div>
-              <div class="col-4"><p>Facebook</p></div>
-              <div class="col-4"><p>Tiktok</p></div>
+            <div class="icons row mb-4">
+              <div class="col-4">
+                <img src="instagram.png" alt="" />
+              </div>
+              <div class="col-4">
+                <img src="facebook.png" alt="" />
+              </div>
+              <div class="col-4">
+                <img src="tiktok.png" alt="" />
+              </div>
             </div>
           </div>
         </div>
