--- a/index.html
+++ b/index.html
@@ -214,7 +214,10 @@
         </div>
       </section>
 
-      <section id="section4_web" class="row mb-4 p-5 text-center">
+      <section
+        id="section4_web"
+        class="row mb-4 p-5 text-center align-items-center"
+      >
         <div class="col-2">
           <img class="img-fluid" src="orange.png" alt="" />
         </div>
